syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


package auth_proto;

message AuthenticationRequest {
	string user_name = 1;
	string password = 2;
} 

message AuthenticationResponse {
	string id = 1;
	string user_name = 2;
	string email = 3;
	repeated string roles = 4;
	bool is_verified = 5;
	string jwt_token = 6;
	string refresh_token = 7;
}

message ConfirmEmailRequest {
    string user_id = 1;
    string code = 2;
}

message ConfirmEmailResponse {
    string result = 1;
}

message ForgotPasswordRequest {
	string email = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string token = 2;
  string password = 3;
  string confirm_password = 4;
}




message RefreshToken {
  string token = 1;
  google.protobuf.Timestamp expires = 2;
  google.protobuf.Timestamp created = 3;
  string created_by_ip = 4;
}


service AuthService {
	rpc login (AuthenticationRequest) returns (AuthenticationResponse);
	rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailResponse);
	rpc ForgotPassword (ForgotPasswordRequest) returns (google.protobuf.Empty);
	rpc ResetPassword (ResetPasswordRequest) returns (google.protobuf.Empty);
}